fix: image align with parent border radius

--- a/beaconnect-react-app/src/pages/Login/components/login.css
+++ b/beaconnect-react-app/src/pages/Login/components/login.css
@@ -18,6 +18,7 @@
   border-radius: 20px;
   padding: 0 0 0 450px;
   transition: transform 0.8s ease-in-out;
+  overflow: hidden;
 }
 
 .Login-Register-Wrapper.redirect {
